--- a/src/app/pages/kpi-setting/component/edit-kpi-setting.component.html
+++ b/src/app/pages/kpi-setting/component/edit-kpi-setting.component.html
@@ -53,7 +53,7 @@
                       Kategori KPI harus diisi
                     </mat-error>
                   </mat-form-field>
-                  <mat-form-field *ngIf="kpi.controls['category'].value == 'visit'" fxLayout="row wrap" class="is-light form-primary">
+                  <mat-form-field *ngIf="kpi.get('category').value == 'brand' || kpi.get('category').value == 'trade program'" fxLayout="row wrap" class="is-light form-primary">
                     <mat-select placeholder="Brand" formControlName="brand">
                       <mat-option *ngFor="let item of brands" [value]="item.id">{{ item.code }}
                       </mat-option>
