--- a/src/app/pages/dte/template/create/template-create.component.html
+++ b/src/app/pages/dte/template/create/template-create.component.html
@@ -760,6 +760,7 @@
           (click)="uploadImage('master', null)">
           <mat-icon>crop_original</mat-icon>
         </button>
+        <h2>Color</h2>
 
         <button mat-icon-button matTooltip="Tambahkan Video" matTooltipPosition="after" class=" secondary-text"
           (click)="uploadVideo('master', null)">
