adjustment for SRC Katalog Koin CDE-3654 React Version

--- a/src/app/pages/src-katalog-koin/index/src-katalog-koin.component.html
+++ b/src/app/pages/src-katalog-koin/index/src-katalog-koin.component.html
@@ -1,3 +1,4 @@
+<div style="margin-top: 100px"></div>
 <mat-progress-spinner *ngIf="loading" mode="indeterminate" class="mat-spinner-white mt-20" diameter="50"
   style="margin:0 auto;"></mat-progress-spinner>
 <iframe *ngIf="!loading" [src]="urlSafe" frameborder="0" width="100%" allowfullscreen></iframe>
