--- a/src/app/pages/sku-management/product/wholesaler-special-price/wholesaler-special-price.component.html
+++ b/src/app/pages/sku-management/product/wholesaler-special-price/wholesaler-special-price.component.html
@@ -1,5 +1,7 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
-
+  <div *ngIf="onLoad" fxLayout="row" fxLayoutAlign="center center" class="pt-48">
+    <mat-spinner [strokeWidth]="6" [diameter]="50" color="accent"></mat-spinner>
+  </div>
   <div class="content" *ngIf="!onLoad">
     <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="10px" fxLayoutAlign="end center" class="p-16 export">
       <a #downloadLink></a>
@@ -15,7 +17,6 @@
     </div>
     <div class="table-wrapper">
       <div fxLayout="row" fxLayoutAlign="space-between center" class="top-table pt-8">
-
         <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
           <mat-icon>search</mat-icon>
           <mat-form-field class="is-light tab-search">
@@ -114,5 +115,12 @@
         <ngx-datatable-column name="Area" prop="area" summary-template="activeCell"></ngx-datatable-column>
       </ngx-datatable>
     </div>
+    
+    <div fxLayout="row" fxLayoutAlign="center center">
+      <div *ngFor="let b of buttons">
+        <ng-template [ngTemplateOutlet]="b.template"></ng-template>
+      </div>
+    </div>
+
   </div>
 </div>
