--- a/src/app/pages/sku-management/product/edit/product-edit.component.html
+++ b/src/app/pages/sku-management/product/edit/product-edit.component.html
@@ -200,7 +200,7 @@
                 </div>
               </div>
               
-              <mat-tab-group>
+              <mat-tab-group (selectedTabChange)="onTabChanged($event);">
                 
                 <!-- GEOTREE TAB -->
                 <mat-tab label="Geotree">
