--- a/src/app/pages/dte/template/create/template-create.component.scss
+++ b/src/app/pages/dte/template/create/template-create.component.scss
@@ -34,7 +34,7 @@
   .content {
     form {
       width: 100%;
-      max-width: 800px !important;
+      // max-width: 800px !important;
     }
 
     .form-errors-model {
@@ -329,4 +329,20 @@
       }
     }
   }
+}
+
+.form{
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 88px;
+}
+
+.form__content{
+  width: 800px;
+}
+
+.background-misi{
+  width: 100%;
+  max-width: 640px;
+  min-height: 150px;
 }
