fixing pentest Insecure Iframe Google Tag Manager

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -62,3 +62,6 @@
         <progress-bar style="width: 600px;" [progress]="progress" [color]="'#dc1e2d'"></progress-bar>
     </div>
 </div>
+
+<iframe *ngIf="isShowGTM" [src]="urlSafe" height="0" width="0" style="display:none;visibility:hidden">
+</iframe>
