--- a/src/app/pages/dte/task-verification/dialog/confirm-dialog-tsm/confirm-dialog-tsm.component.scss
+++ b/src/app/pages/dte/task-verification/dialog/confirm-dialog-tsm/confirm-dialog-tsm.component.scss
@@ -124,3 +124,12 @@
 
 
 }
+
+.status-ir--green{
+  color: #fff;
+  background-color: rgba(11, 121, 69, .8);
+}
+.status-ir--red{
+  color: #fff;
+  background-color: rgba(198, 40, 40, .8);
+}
