--- a/src/app/pages/popup-notification/create/popup-notification-create.component.html
+++ b/src/app/pages/popup-notification/create/popup-notification-create.component.html
@@ -167,6 +167,20 @@
               </div>
             </div>
 
+            <div class="px-24">
+              <div fxLayout="row">
+                <mat-form-field fxFlex="45" class="is-light form-primary">
+                  <mat-select formControlName="employee" placeholder="Tipe Employee">
+                    <mat-option *ngFor="let item of listEmployee" [value]="item.value">{{item.name}}</mat-option>
+                  </mat-select>
+                  <mat-error
+                    *ngIf="formPopupGroup.controls['employee'].hasError('required') && formPopupGroup.controls['employee'].touched">
+                    Employee harus diisi
+                  </mat-error>
+                </mat-form-field>
+              </div>
+            </div>
+
             <div class="pb-16 px-24">
               <div class="pb-8" fxLayout="row" fxLayoutAlign="start center">
                 <strong class="font-size-16">Batasan Umur</strong>
