--- a/src/app/pages/notification/create/notification-create.component.html
+++ b/src/app/pages/notification/create/notification-create.component.html
@@ -220,7 +220,7 @@
           </div>
 
           <div fxLayout="row" class="pb-24 px-24">
-            <mat-checkbox class="mt-4 ml-4 mb-8" formControlName="send_ayo">
+            <mat-checkbox class="mt-4 ml-4 mb-8" formControlName="send_ayo" (change)="sendAYOChange($event)">
               Send from AYO SRC
             </mat-checkbox>
           </div>
