--- a/src/app/pages/kpi-setting/component/edit-kpi-setting.component.html
+++ b/src/app/pages/kpi-setting/component/edit-kpi-setting.component.html
@@ -41,6 +41,16 @@
                   </div>
                   <div fxFlex="50" fxLayout="row wrap" fxLayoutAlign="end center"
                     fxLayout.lt-md="column" fxLayoutGap="10px" fxLayoutGap.lt-md="0px">
+                    <button *ngIf="i !== 0"
+                      mat-raised-button color="primary" type="button"
+                      (click)="moveUp(i)">
+                      <mat-icon>arrow_upward</mat-icon>
+                    </button>
+                    <button *ngIf="i !== (formKPI.get('kpis').value.length - 1)"
+                      mat-raised-button color="primary" type="button"
+                      (click)="moveDown(i)">
+                      <mat-icon>arrow_downward</mat-icon>
+                    </button>
                     <button
                       *ngIf="formKPI.get('kpis').value.length === 1 || i === (formKPI.get('kpis').value.length - 1)"
                       mat-raised-button type="button" (click)="addKPI()">
