--- a/src/app/pages/kpi-setting/component/list-kpi-groups.component.html
+++ b/src/app/pages/kpi-setting/component/list-kpi-groups.component.html
@@ -1,6 +1,12 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
   <page-content-header [contentTitle]="'KPI Setting'">
+    <div class="button-row" fxLayout="row">
+      <button style="width: 170px;" mat-raised-button aria-label="Login" type="button"
+        [routerLink]="['/kpisetting', 'kpi-setting-edit']">
+        <mat-icon>add</mat-icon>BUAT
+      </button>
+    </div>
   </page-content-header>
   <!-- / HEADER -->
   <div class="content p-24">
@@ -35,7 +41,7 @@
               <button mat-icon-button color="" (click)="edit(row)" [routerLink]="['/kpisetting/kpi-setting-edit/'+ row.id +'']">
                 <mat-icon class="secondary-text">edit</mat-icon>
               </button>
-              <button mat-icon-button color="" (click)="delete(row)">
+              <button mat-icon-button color="" (click)="delete(row.id)">
                 <mat-icon class="secondary-text">delete</mat-icon>
               </button>
             </div>
