Fix KPI setting create

--- a/src/app/pages/kpi-setting/component/list-kpi-groups.component.html
+++ b/src/app/pages/kpi-setting/component/list-kpi-groups.component.html
@@ -3,7 +3,7 @@
   <page-content-header [contentTitle]="'KPI Setting'">
     <div class="button-row" fxLayout="row">
       <button style="width: 170px;" mat-raised-button aria-label="Login" type="button"
-        [routerLink]="['/kpisetting', 'kpi-setting-edit']">
+        [routerLink]="['/kpisetting', 'kpi-setting-create']">
         <mat-icon>add</mat-icon>BUAT
       </button>
     </div>
