--- a/src/app/pages/kpi-setting/component/edit-kpi-setting.component.html
+++ b/src/app/pages/kpi-setting/component/edit-kpi-setting.component.html
@@ -15,7 +15,7 @@
           </div>
           <div class="ayo-middle pt-24" fxLayout="column">
             <mat-form-field fxLayout="row wrap" class="is-light form-primary">
-              <mat-select placeholder="start" formControlName="start_kps">
+              <mat-select placeholder="Start KPS" formControlName="start_kps">
                 <mat-option *ngFor="let item of KPSList" [value]="item.id">{{item.kps_number}} ({{item.start_date  | date:'dd/MM/yyyy'}})
                 </mat-option>
               </mat-select>
@@ -24,7 +24,7 @@
               </mat-error>
             </mat-form-field>
             <mat-form-field fxLayout="row wrap" class="is-light form-primary">
-              <mat-select placeholder="end" formControlName="end_kps">
+              <mat-select placeholder="End KPS" formControlName="end_kps">
                 <mat-option *ngFor="let item of KPSList" [value]="item.id">{{item.kps_number}} ({{item.end_date  | date:'dd/MM/yyyy'}})
                 </mat-option>
               </mat-select>
