--- a/src/app/pages/kpi-setting/component/list-kpi-groups.component.html
+++ b/src/app/pages/kpi-setting/component/list-kpi-groups.component.html
@@ -33,6 +33,11 @@
             <span class="row-end-kps" >{{row.end_kps}} ({{row.end_date  | date:'dd/MM/yyyy'}})</span>
           </ng-template>
         </ngx-datatable-column>
+        <ngx-datatable-column name="Area Audience" prop="areas">
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+            <span class="row-areas" >{{row.areas.join(',')}})</span>
+          </ng-template>
+        </ngx-datatable-column>
 
         <ngx-datatable-column [width]="98" name="Tindakan" headerClass="textright" [sortable]="false">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value"
