--- a/src/app/pages/kpi-setting/component/list-kpi-groups.component.html
+++ b/src/app/pages/kpi-setting/component/list-kpi-groups.component.html
@@ -35,7 +35,7 @@
         </ngx-datatable-column>
         <ngx-datatable-column name="Area Audience" prop="areas">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            <span class="row-areas" >{{row.areas.join(',')}})</span>
+            <span class="row-areas" >{{row.areas.join(',')}}</span>
           </ng-template>
         </ngx-datatable-column>
 
